sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                                                           | **Description**                                                                                                                                                                                                                                                                                                         |
| ------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [extensionMetadataGetSample.js][extensionmetadatagetsample]                                                                                             | Gets an Extension Metadata based on location, publisher, extensionType and version x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/extension/ExtensionMetadata_Get.json                                                                             |
| [extensionMetadataListSample.js][extensionmetadatalistsample]                                                                                           | Gets all Extension versions based on location, publisher, extensionType x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/extension/ExtensionMetadata_List.json                                                                                       |
| [licenseProfilesCreateOrUpdateSample.js][licenseprofilescreateorupdatesample]                                                                           | The operation to create or update a license profile. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/licenseProfile/LicenseProfile_CreateOrUpdate.json                                                                                              |
| [licenseProfilesDeleteSample.js][licenseprofilesdeletesample]                                                                                           | The operation to delete a license profile. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/licenseProfile/LicenseProfile_Delete.json                                                                                                                |
| [licenseProfilesGetSample.js][licenseprofilesgetsample]                                                                                                 | Retrieves information about the view of a license profile. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/licenseProfile/LicenseProfile_Get.json                                                                                                   |
| [licenseProfilesListSample.js][licenseprofileslistsample]                                                                                               | The operation to get all license profiles of a non-Azure machine x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/licenseProfile/LicenseProfile_List.json                                                                                            |
| [licenseProfilesUpdateSample.js][licenseprofilesupdatesample]                                                                                           | The operation to update a license profile. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/licenseProfile/LicenseProfile_Update.json                                                                                                                |
| [licensesCreateOrUpdateSample.js][licensescreateorupdatesample]                                                                                         | The operation to create or update a license. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/license/License_CreateOrUpdate.json                                                                                                                    |
| [licensesDeleteSample.js][licensesdeletesample]                                                                                                         | The operation to delete a license. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/license/License_Delete.json                                                                                                                                      |
| [licensesGetSample.js][licensesgetsample]                                                                                                               | Retrieves information about the view of a license. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/license/License_Get.json                                                                                                                         |
| [licensesListByResourceGroupSample.js][licenseslistbyresourcegroupsample]                                                                               | The operation to get all licenses of a non-Azure machine x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/license/License_ListByResourceGroup.json                                                                                                   |
| [licensesListBySubscriptionSample.js][licenseslistbysubscriptionsample]                                                                                 | The operation to get all licenses of a non-Azure machine x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/license/License_ListBySubscription.json                                                                                                    |
| [licensesUpdateSample.js][licensesupdatesample]                                                                                                         | The operation to update a license. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/license/License_Update.json                                                                                                                                      |
| [licensesValidateLicenseSample.js][licensesvalidatelicensesample]                                                                                       | The operation to validate a license. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/license/License_ValidateLicense.json                                                                                                                           |
| [machineExtensionsCreateOrUpdateSample.js][machineextensionscreateorupdatesample]                                                                       | The operation to create or update the extension. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/extension/Extension_CreateOrUpdate.json                                                                                                            |
| [machineExtensionsDeleteSample.js][machineextensionsdeletesample]                                                                                       | The operation to delete the extension. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/extension/Extension_Delete.json                                                                                                                              |
| [machineExtensionsGetSample.js][machineextensionsgetsample]                                                                                             | The operation to get the extension. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/extension/Extension_Get.json                                                                                                                                    |
| [machineExtensionsListSample.js][machineextensionslistsample]                                                                                           | The operation to get all extensions of a non-Azure machine x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/extension/Extension_List.json                                                                                                            |
| [machineExtensionsUpdateSample.js][machineextensionsupdatesample]                                                                                       | The operation to update the extension. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/extension/Extension_Update.json                                                                                                                              |
| [machinesAssessPatchesSample.js][machinesassesspatchessample]                                                                                           | The operation to assess patches on a hybrid machine identity in Azure. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/machine/Machine_AssessPatches.json                                                                                           |
| [machinesDeleteSample.js][machinesdeletesample]                                                                                                         | The operation to delete a hybrid machine. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/machine/Machines_Delete.json                                                                                                                              |
| [machinesGetSample.js][machinesgetsample]                                                                                                               | Retrieves information about the model view or the instance view of a hybrid machine. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/machine/Machines_Get.json                                                                                      |
| [machinesInstallPatchesSample.js][machinesinstallpatchessample]                                                                                         | The operation to install patches on a hybrid machine identity in Azure. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/machine/Machine_InstallPatches.json                                                                                         |
| [machinesListByResourceGroupSample.js][machineslistbyresourcegroupsample]                                                                               | Lists all the hybrid machines in the specified resource group. Use the nextLink property in the response to get the next page of hybrid machines. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/machine/Machines_ListByResourceGroup.json         |
| [machinesListBySubscriptionSample.js][machineslistbysubscriptionsample]                                                                                 | Lists all the hybrid machines in the specified subscription. Use the nextLink property in the response to get the next page of hybrid machines. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/machine/Machines_ListBySubscription.json            |
| [networkProfileGetSample.js][networkprofilegetsample]                                                                                                   | The operation to get network information of hybrid machine x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/NetworkProfile_Get.json                                                                                                                  |
| [networkSecurityPerimeterConfigurationsGetByPrivateLinkScopeSample.js][networksecurityperimeterconfigurationsgetbyprivatelinkscopesample]               | Gets the network security perimeter configuration for a private link scope. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/networkSecurityPerimeterConfiguration/NetworkSecurityPerimeterConfigurationGet.json                                     |
| [networkSecurityPerimeterConfigurationsListByPrivateLinkScopeSample.js][networksecurityperimeterconfigurationslistbyprivatelinkscopesample]             | Lists the network security perimeter configurations for a private link scope. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/networkSecurityPerimeterConfiguration/NetworkSecurityPerimeterConfigurationList.json                                  |
| [networkSecurityPerimeterConfigurationsReconcileForPrivateLinkScopeSample.js][networksecurityperimeterconfigurationsreconcileforprivatelinkscopesample] | Forces the network security perimeter configuration to refresh for a private link scope. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/networkSecurityPerimeterConfiguration/NetworkSecurityPerimeterConfigurationReconcile.json                  |
| [operationsListSample.js][operationslistsample]                                                                                                         | Gets a list of hybrid compute operations. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/Operations_List.json                                                                                                                                      |
| [privateEndpointConnectionsCreateOrUpdateSample.js][privateendpointconnectionscreateorupdatesample]                                                     | Approve or reject a private endpoint connection with a given name. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateEndpoint/PrivateEndpointConnection_Update.json                                                                            |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]                                                                     | Deletes a private endpoint connection with a given name. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateEndpoint/PrivateEndpointConnection_Delete.json                                                                                      |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]                                                                           | Gets a private endpoint connection. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateEndpoint/PrivateEndpointConnection_Get.json                                                                                                              |
| [privateEndpointConnectionsListByPrivateLinkScopeSample.js][privateendpointconnectionslistbyprivatelinkscopesample]                                     | Gets all private endpoint connections on a private link scope. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateEndpoint/PrivateEndpointConnection_List.json                                                                                  |
| [privateLinkResourcesGetSample.js][privatelinkresourcesgetsample]                                                                                       | Gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateLinkScope/PrivateLinkScopePrivateLinkResource_Get.json                                         |
| [privateLinkResourcesListByPrivateLinkScopeSample.js][privatelinkresourceslistbyprivatelinkscopesample]                                                 | Gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateLinkScope/PrivateLinkScopePrivateLinkResource_ListGet.json                                     |
| [privateLinkScopesCreateOrUpdateSample.js][privatelinkscopescreateorupdatesample]                                                                       | Creates (or updates) a Azure Arc PrivateLinkScope. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateLinkScope/PrivateLinkScopes_Create.json |
| [privateLinkScopesDeleteSample.js][privatelinkscopesdeletesample]                                                                                       | Deletes a Azure Arc PrivateLinkScope. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateLinkScope/PrivateLinkScopes_Delete.json                                                                                                                |
| [privateLinkScopesGetSample.js][privatelinkscopesgetsample]                                                                                             | Returns a Azure Arc PrivateLinkScope. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateLinkScope/PrivateLinkScopes_Get.json                                                                                                                   |
| [privateLinkScopesGetValidationDetailsForMachineSample.js][privatelinkscopesgetvalidationdetailsformachinesample]                                       | Returns a Azure Arc PrivateLinkScope's validation details for a given machine. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateLinkScope/PrivateLinkScopes_GetValidationForMachine.json                                                      |
| [privateLinkScopesGetValidationDetailsSample.js][privatelinkscopesgetvalidationdetailssample]                                                           | Returns a Azure Arc PrivateLinkScope's validation details. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateLinkScope/PrivateLinkScopes_GetValidation.json                                                                                    |
| [privateLinkScopesListByResourceGroupSample.js][privatelinkscopeslistbyresourcegroupsample]                                                             | Gets a list of Azure Arc PrivateLinkScopes within a resource group. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateLinkScope/PrivateLinkScopes_ListByResourceGroup.json                                                                     |
| [privateLinkScopesListSample.js][privatelinkscopeslistsample]                                                                                           | Gets a list of all Azure Arc PrivateLinkScopes within a subscription. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateLinkScope/PrivateLinkScopes_List.json                                                                                  |
| [privateLinkScopesUpdateTagsSample.js][privatelinkscopesupdatetagssample]                                                                               | Updates an existing PrivateLinkScope's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/privateLinkScope/PrivateLinkScopes_UpdateTagsOnly.json                                           |
| [upgradeExtensionsSample.js][upgradeextensionssample]                                                                                                   | The operation to Upgrade Machine Extensions. x-ms-original-file: specification/hybridcompute/resource-manager/Microsoft.HybridCompute/stable/2024-07-10/examples/extension/Extensions_Upgrade.json                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node extensionMetadataGetSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env HYBRIDCOMPUTE_SUBSCRIPTION_ID="<hybridcompute subscription id>" node extensionMetadataGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[extensionmetadatagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/extensionMetadataGetSample.js
[extensionmetadatalistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/extensionMetadataListSample.js
[licenseprofilescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licenseProfilesCreateOrUpdateSample.js
[licenseprofilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licenseProfilesDeleteSample.js
[licenseprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licenseProfilesGetSample.js
[licenseprofileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licenseProfilesListSample.js
[licenseprofilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licenseProfilesUpdateSample.js
[licensescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licensesCreateOrUpdateSample.js
[licensesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licensesDeleteSample.js
[licensesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licensesGetSample.js
[licenseslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licensesListByResourceGroupSample.js
[licenseslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licensesListBySubscriptionSample.js
[licensesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licensesUpdateSample.js
[licensesvalidatelicensesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/licensesValidateLicenseSample.js
[machineextensionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machineExtensionsCreateOrUpdateSample.js
[machineextensionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machineExtensionsDeleteSample.js
[machineextensionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machineExtensionsGetSample.js
[machineextensionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machineExtensionsListSample.js
[machineextensionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machineExtensionsUpdateSample.js
[machinesassesspatchessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machinesAssessPatchesSample.js
[machinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machinesDeleteSample.js
[machinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machinesGetSample.js
[machinesinstallpatchessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machinesInstallPatchesSample.js
[machineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machinesListByResourceGroupSample.js
[machineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/machinesListBySubscriptionSample.js
[networkprofilegetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/networkProfileGetSample.js
[networksecurityperimeterconfigurationsgetbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/networkSecurityPerimeterConfigurationsGetByPrivateLinkScopeSample.js
[networksecurityperimeterconfigurationslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/networkSecurityPerimeterConfigurationsListByPrivateLinkScopeSample.js
[networksecurityperimeterconfigurationsreconcileforprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/networkSecurityPerimeterConfigurationsReconcileForPrivateLinkScopeSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/operationsListSample.js
[privateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateEndpointConnectionsCreateOrUpdateSample.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateEndpointConnectionsListByPrivateLinkScopeSample.js
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateLinkResourcesGetSample.js
[privatelinkresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateLinkResourcesListByPrivateLinkScopeSample.js
[privatelinkscopescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateLinkScopesCreateOrUpdateSample.js
[privatelinkscopesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateLinkScopesDeleteSample.js
[privatelinkscopesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateLinkScopesGetSample.js
[privatelinkscopesgetvalidationdetailsformachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateLinkScopesGetValidationDetailsForMachineSample.js
[privatelinkscopesgetvalidationdetailssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateLinkScopesGetValidationDetailsSample.js
[privatelinkscopeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateLinkScopesListByResourceGroupSample.js
[privatelinkscopeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateLinkScopesListSample.js
[privatelinkscopesupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/privateLinkScopesUpdateTagsSample.js
[upgradeextensionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v4/javascript/upgradeExtensionsSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-hybridcompute?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/hybridcompute/arm-hybridcompute/README.md
