sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/README.md
# @azure/arm-hybridcompute client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-hybridcompute in some common scenarios.

| **File Name**                                                                                                                                           | **Description**                                                                                                                                                                                                                    |
| ------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [extensionMetadataGetSample.js][extensionmetadatagetsample]                                                                                             | gets an Extension Metadata based on location, publisher, extensionType and version x-ms-original-file: 2026-07-15/extension/ExtensionMetadata_Get.json                                                                             |
| [extensionMetadataListSample.js][extensionmetadatalistsample]                                                                                           | gets all Extension versions based on location, publisher, extensionType x-ms-original-file: 2026-07-15/extension/ExtensionMetadata_List.json                                                                                       |
| [extensionMetadataV2GetSample.js][extensionmetadatav2getsample]                                                                                         | gets an Extension Metadata based on location, publisher, extensionType and version x-ms-original-file: 2026-07-15/extension/ExtensionMetadataV2_Get.json                                                                           |
| [extensionMetadataV2ListSample.js][extensionmetadatav2listsample]                                                                                       | gets all Extension versions based on location, publisher, extensionType x-ms-original-file: 2026-07-15/extension/ExtensionMetadataV2_List.json                                                                                     |
| [extensionPublisherListSample.js][extensionpublisherlistsample]                                                                                         | gets all Extension publishers based on the location x-ms-original-file: 2026-07-15/extension/ExtensionPublisher_List.json                                                                                                          |
| [extensionTypeListSample.js][extensiontypelistsample]                                                                                                   | gets all Extension types based on location and publisher x-ms-original-file: 2026-07-15/extension/ExtensionType_List.json                                                                                                          |
| [gatewaysCreateOrUpdateSample.js][gatewayscreateorupdatesample]                                                                                         | the operation to create or update a gateway. x-ms-original-file: 2026-07-15/gateway/Gateway_CreateOrUpdate.json                                                                                                                    |
| [gatewaysDeleteSample.js][gatewaysdeletesample]                                                                                                         | the operation to delete a gateway. x-ms-original-file: 2026-07-15/gateway/Gateway_Delete.json                                                                                                                                      |
| [gatewaysGetSample.js][gatewaysgetsample]                                                                                                               | retrieves information about the view of a gateway. x-ms-original-file: 2026-07-15/gateway/Gateway_Get.json                                                                                                                         |
| [gatewaysListByResourceGroupSample.js][gatewayslistbyresourcegroupsample]                                                                               | the operation to get all gateways of a non-Azure machine x-ms-original-file: 2026-07-15/gateway/Gateway_ListByResourceGroup.json                                                                                                   |
| [gatewaysListBySubscriptionSample.js][gatewayslistbysubscriptionsample]                                                                                 | the operation to get all gateways of a non-Azure machine x-ms-original-file: 2026-07-15/gateway/Gateway_ListBySubscription.json                                                                                                    |
| [gatewaysUpdateSample.js][gatewaysupdatesample]                                                                                                         | the operation to update a gateway. x-ms-original-file: 2026-07-15/gateway/Gateway_Update.json                                                                                                                                      |
| [licenseProfilesCreateOrUpdateSample.js][licenseprofilescreateorupdatesample]                                                                           | the operation to create or update a license profile. x-ms-original-file: 2026-07-15/licenseProfile/LicenseProfile_CreateOrUpdate.json                                                                                              |
| [licenseProfilesDeleteSample.js][licenseprofilesdeletesample]                                                                                           | the operation to delete a license profile. x-ms-original-file: 2026-07-15/licenseProfile/LicenseProfile_Delete.json                                                                                                                |
| [licenseProfilesGetSample.js][licenseprofilesgetsample]                                                                                                 | retrieves information about the view of a license profile. x-ms-original-file: 2026-07-15/licenseProfile/LicenseProfile_Get.json                                                                                                   |
| [licenseProfilesListSample.js][licenseprofileslistsample]                                                                                               | the operation to get all license profiles of a non-Azure machine x-ms-original-file: 2026-07-15/licenseProfile/LicenseProfile_List.json                                                                                            |
| [licenseProfilesUpdateSample.js][licenseprofilesupdatesample]                                                                                           | the operation to update a license profile. x-ms-original-file: 2026-07-15/licenseProfile/LicenseProfile_Update.json                                                                                                                |
| [licensesCreateOrUpdateSample.js][licensescreateorupdatesample]                                                                                         | the operation to create or update a license. x-ms-original-file: 2026-07-15/license/License_CreateOrUpdate.json                                                                                                                    |
| [licensesDeleteSample.js][licensesdeletesample]                                                                                                         | the operation to delete a license. x-ms-original-file: 2026-07-15/license/License_Delete.json                                                                                                                                      |
| [licensesGetSample.js][licensesgetsample]                                                                                                               | retrieves information about the view of a license. x-ms-original-file: 2026-07-15/license/License_Get.json                                                                                                                         |
| [licensesListByResourceGroupSample.js][licenseslistbyresourcegroupsample]                                                                               | the operation to get all licenses of a non-Azure machine x-ms-original-file: 2026-07-15/license/License_ListByResourceGroup.json                                                                                                   |
| [licensesListBySubscriptionSample.js][licenseslistbysubscriptionsample]                                                                                 | the operation to get all licenses of a non-Azure machine x-ms-original-file: 2026-07-15/license/License_ListBySubscription.json                                                                                                    |
| [licensesUpdateSample.js][licensesupdatesample]                                                                                                         | the operation to update a license. x-ms-original-file: 2026-07-15/license/License_Update.json                                                                                                                                      |
| [licensesValidateLicenseSample.js][licensesvalidatelicensesample]                                                                                       | the operation to validate a license. x-ms-original-file: 2026-07-15/license/License_ValidateLicense.json                                                                                                                           |
| [machineExtensionsCreateOrUpdateSample.js][machineextensionscreateorupdatesample]                                                                       | the operation to create or update the extension. x-ms-original-file: 2026-07-15/extension/Extension_CreateOrUpdate.json                                                                                                            |
| [machineExtensionsDeleteSample.js][machineextensionsdeletesample]                                                                                       | the operation to delete the extension. x-ms-original-file: 2026-07-15/extension/Extension_Delete.json                                                                                                                              |
| [machineExtensionsGetSample.js][machineextensionsgetsample]                                                                                             | the operation to get the extension. x-ms-original-file: 2026-07-15/extension/Extension_Get.json                                                                                                                                    |
| [machineExtensionsListSample.js][machineextensionslistsample]                                                                                           | the operation to get all extensions of a non-Azure machine x-ms-original-file: 2026-07-15/extension/Extension_List.json                                                                                                            |
| [machineExtensionsUpdateSample.js][machineextensionsupdatesample]                                                                                       | the operation to create or update the extension. x-ms-original-file: 2026-07-15/extension/Extension_Update.json                                                                                                                    |
| [machineRunCommandsCreateOrUpdateSample.js][machineruncommandscreateorupdatesample]                                                                     | the operation to create or update a run command. x-ms-original-file: 2026-07-15/runCommand/RunCommands_CreateOrUpdate.json                                                                                                         |
| [machineRunCommandsDeleteSample.js][machineruncommandsdeletesample]                                                                                     | the operation to delete a run command. x-ms-original-file: 2026-07-15/runCommand/RunCommands_Delete.json                                                                                                                           |
| [machineRunCommandsGetSample.js][machineruncommandsgetsample]                                                                                           | the operation to get a run command. x-ms-original-file: 2026-07-15/runCommand/RunCommands_Get.json                                                                                                                                 |
| [machineRunCommandsListSample.js][machineruncommandslistsample]                                                                                         | the operation to get all the run commands of a non-Azure machine. x-ms-original-file: 2026-07-15/runCommand/RunCommands_List.json                                                                                                  |
| [machinesAssessPatchesSample.js][machinesassesspatchessample]                                                                                           | the operation to assess patches on a hybrid machine identity in Azure. x-ms-original-file: 2026-07-15/machine/Machine_AssessPatches.json                                                                                           |
| [machinesCreateOrUpdateSample.js][machinescreateorupdatesample]                                                                                         | the operation to create or update a hybrid machine. Please note some properties can be set only during machine creation. x-ms-original-file: 2026-07-15/machine/Machines_CreateOrUpdate.json                                       |
| [machinesDeleteSample.js][machinesdeletesample]                                                                                                         | the operation to delete a hybrid machine. x-ms-original-file: 2026-07-15/machine/Machines_Delete.json                                                                                                                              |
| [machinesGetSample.js][machinesgetsample]                                                                                                               | retrieves information about the model view or the instance view of a hybrid machine. x-ms-original-file: 2026-07-15/machine/Machines_Get.json                                                                                      |
| [machinesInstallPatchesSample.js][machinesinstallpatchessample]                                                                                         | the operation to install patches on a hybrid machine identity in Azure. x-ms-original-file: 2026-07-15/machine/Machine_InstallPatches.json                                                                                         |
| [machinesListByResourceGroupSample.js][machineslistbyresourcegroupsample]                                                                               | lists all the hybrid machines in the specified resource group. Use the nextLink property in the response to get the next page of hybrid machines. x-ms-original-file: 2026-07-15/machine/Machines_ListByResourceGroup.json         |
| [machinesListBySubscriptionSample.js][machineslistbysubscriptionsample]                                                                                 | lists all the hybrid machines in the specified subscription. Use the nextLink property in the response to get the next page of hybrid machines. x-ms-original-file: 2026-07-15/machine/Machines_ListBySubscription.json            |
| [machinesUpdateSample.js][machinesupdatesample]                                                                                                         | the operation to update a hybrid machine. x-ms-original-file: 2026-07-15/machine/Machines_Update.json                                                                                                                              |
| [networkProfileOperationsGetSample.js][networkprofileoperationsgetsample]                                                                               | the operation to get network information of hybrid machine x-ms-original-file: 2026-07-15/NetworkProfile_Get.json                                                                                                                  |
| [networkSecurityPerimeterConfigurationsGetByPrivateLinkScopeSample.js][networksecurityperimeterconfigurationsgetbyprivatelinkscopesample]               | gets the network security perimeter configuration for a private link scope. x-ms-original-file: 2026-07-15/networkSecurityPerimeterConfiguration/NetworkSecurityPerimeterConfigurationGet.json                                     |
| [networkSecurityPerimeterConfigurationsListByPrivateLinkScopeSample.js][networksecurityperimeterconfigurationslistbyprivatelinkscopesample]             | lists the network security perimeter configurations for a private link scope. x-ms-original-file: 2026-07-15/networkSecurityPerimeterConfiguration/NetworkSecurityPerimeterConfigurationList.json                                  |
| [networkSecurityPerimeterConfigurationsReconcileForPrivateLinkScopeSample.js][networksecurityperimeterconfigurationsreconcileforprivatelinkscopesample] | forces the network security perimeter configuration to refresh for a private link scope. x-ms-original-file: 2026-07-15/networkSecurityPerimeterConfiguration/NetworkSecurityPerimeterConfigurationReconcile.json                  |
| [operationsListSample.js][operationslistsample]                                                                                                         | gets a list of hybrid compute operations. x-ms-original-file: 2026-07-15/Operations_List.json                                                                                                                                      |
| [privateEndpointConnectionsCreateOrUpdateSample.js][privateendpointconnectionscreateorupdatesample]                                                     | approve or reject a private endpoint connection with a given name. x-ms-original-file: 2026-07-15/privateEndpoint/PrivateEndpointConnection_Update.json                                                                            |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]                                                                     | deletes a private endpoint connection with a given name. x-ms-original-file: 2026-07-15/privateEndpoint/PrivateEndpointConnection_Delete.json                                                                                      |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]                                                                           | gets a private endpoint connection. x-ms-original-file: 2026-07-15/privateEndpoint/PrivateEndpointConnection_Get.json                                                                                                              |
| [privateEndpointConnectionsListByPrivateLinkScopeSample.js][privateendpointconnectionslistbyprivatelinkscopesample]                                     | gets all private endpoint connections on a private link scope. x-ms-original-file: 2026-07-15/privateEndpoint/PrivateEndpointConnection_List.json                                                                                  |
| [privateLinkResourcesGetSample.js][privatelinkresourcesgetsample]                                                                                       | gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopePrivateLinkResource_Get.json                                         |
| [privateLinkResourcesListByPrivateLinkScopeSample.js][privatelinkresourceslistbyprivatelinkscopesample]                                                 | gets the private link resources that need to be created for a Azure Monitor PrivateLinkScope. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopePrivateLinkResource_ListGet.json                                     |
| [privateLinkScopesCreateOrUpdateSample.js][privatelinkscopescreateorupdatesample]                                                                       | creates (or updates) a Azure Arc PrivateLinkScope. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_Create.json |
| [privateLinkScopesDeleteSample.js][privatelinkscopesdeletesample]                                                                                       | deletes a Azure Arc PrivateLinkScope. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_Delete.json                                                                                                                |
| [privateLinkScopesGetSample.js][privatelinkscopesgetsample]                                                                                             | returns a Azure Arc PrivateLinkScope. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_Get.json                                                                                                                   |
| [privateLinkScopesGetValidationDetailsForMachineSample.js][privatelinkscopesgetvalidationdetailsformachinesample]                                       | returns a Azure Arc PrivateLinkScope's validation details for a given machine. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_GetValidationForMachine.json                                                      |
| [privateLinkScopesGetValidationDetailsSample.js][privatelinkscopesgetvalidationdetailssample]                                                           | returns a Azure Arc PrivateLinkScope's validation details. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_GetValidation.json                                                                                    |
| [privateLinkScopesListByResourceGroupSample.js][privatelinkscopeslistbyresourcegroupsample]                                                             | gets a list of Azure Arc PrivateLinkScopes within a resource group. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_ListByResourceGroup.json                                                                     |
| [privateLinkScopesListSample.js][privatelinkscopeslistsample]                                                                                           | gets a list of all Azure Arc PrivateLinkScopes within a subscription. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_List.json                                                                                  |
| [privateLinkScopesUpdateTagsSample.js][privatelinkscopesupdatetagssample]                                                                               | updates an existing PrivateLinkScope's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2026-07-15/privateLinkScope/PrivateLinkScopes_UpdateTagsOnly.json                                           |
| [settingsGetSample.js][settingsgetsample]                                                                                                               | returns the base Settings for the target resource. x-ms-original-file: 2026-07-15/settings/SettingsGet.json                                                                                                                        |
| [settingsPatchSample.js][settingspatchsample]                                                                                                           | update the base Settings of the target resource. x-ms-original-file: 2026-07-15/settings/SettingsPatch.json                                                                                                                        |
| [settingsUpdateSample.js][settingsupdatesample]                                                                                                         | updates the base Settings of the target resource. x-ms-original-file: 2026-07-15/settings/SettingsUpdate.json                                                                                                                      |
| [setupExtensionsSample.js][setupextensionssample]                                                                                                       | the operation to Setup Machine Extensions. x-ms-original-file: 2026-07-15/extension/Extension_Add.json                                                                                                                             |
| [upgradeExtensionsSample.js][upgradeextensionssample]                                                                                                   | the operation to Upgrade Machine Extensions. x-ms-original-file: 2026-07-15/extension/Extensions_Upgrade.json                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node extensionMetadataGetSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node extensionMetadataGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[extensionmetadatagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/extensionMetadataGetSample.js
[extensionmetadatalistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/extensionMetadataListSample.js
[extensionmetadatav2getsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/extensionMetadataV2GetSample.js
[extensionmetadatav2listsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/extensionMetadataV2ListSample.js
[extensionpublisherlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/extensionPublisherListSample.js
[extensiontypelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/extensionTypeListSample.js
[gatewayscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/gatewaysCreateOrUpdateSample.js
[gatewaysdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/gatewaysDeleteSample.js
[gatewaysgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/gatewaysGetSample.js
[gatewayslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/gatewaysListByResourceGroupSample.js
[gatewayslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/gatewaysListBySubscriptionSample.js
[gatewaysupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/gatewaysUpdateSample.js
[licenseprofilescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licenseProfilesCreateOrUpdateSample.js
[licenseprofilesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licenseProfilesDeleteSample.js
[licenseprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licenseProfilesGetSample.js
[licenseprofileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licenseProfilesListSample.js
[licenseprofilesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licenseProfilesUpdateSample.js
[licensescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licensesCreateOrUpdateSample.js
[licensesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licensesDeleteSample.js
[licensesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licensesGetSample.js
[licenseslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licensesListByResourceGroupSample.js
[licenseslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licensesListBySubscriptionSample.js
[licensesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licensesUpdateSample.js
[licensesvalidatelicensesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/licensesValidateLicenseSample.js
[machineextensionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machineExtensionsCreateOrUpdateSample.js
[machineextensionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machineExtensionsDeleteSample.js
[machineextensionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machineExtensionsGetSample.js
[machineextensionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machineExtensionsListSample.js
[machineextensionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machineExtensionsUpdateSample.js
[machineruncommandscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machineRunCommandsCreateOrUpdateSample.js
[machineruncommandsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machineRunCommandsDeleteSample.js
[machineruncommandsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machineRunCommandsGetSample.js
[machineruncommandslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machineRunCommandsListSample.js
[machinesassesspatchessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machinesAssessPatchesSample.js
[machinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machinesCreateOrUpdateSample.js
[machinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machinesDeleteSample.js
[machinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machinesGetSample.js
[machinesinstallpatchessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machinesInstallPatchesSample.js
[machineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machinesListByResourceGroupSample.js
[machineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machinesListBySubscriptionSample.js
[machinesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/machinesUpdateSample.js
[networkprofileoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/networkProfileOperationsGetSample.js
[networksecurityperimeterconfigurationsgetbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/networkSecurityPerimeterConfigurationsGetByPrivateLinkScopeSample.js
[networksecurityperimeterconfigurationslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/networkSecurityPerimeterConfigurationsListByPrivateLinkScopeSample.js
[networksecurityperimeterconfigurationsreconcileforprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/networkSecurityPerimeterConfigurationsReconcileForPrivateLinkScopeSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/operationsListSample.js
[privateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateEndpointConnectionsCreateOrUpdateSample.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateEndpointConnectionsListByPrivateLinkScopeSample.js
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateLinkResourcesGetSample.js
[privatelinkresourceslistbyprivatelinkscopesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateLinkResourcesListByPrivateLinkScopeSample.js
[privatelinkscopescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateLinkScopesCreateOrUpdateSample.js
[privatelinkscopesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateLinkScopesDeleteSample.js
[privatelinkscopesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateLinkScopesGetSample.js
[privatelinkscopesgetvalidationdetailsformachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateLinkScopesGetValidationDetailsForMachineSample.js
[privatelinkscopesgetvalidationdetailssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateLinkScopesGetValidationDetailsSample.js
[privatelinkscopeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateLinkScopesListByResourceGroupSample.js
[privatelinkscopeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateLinkScopesListSample.js
[privatelinkscopesupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/privateLinkScopesUpdateTagsSample.js
[settingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/settingsGetSample.js
[settingspatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/settingsPatchSample.js
[settingsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/settingsUpdateSample.js
[setupextensionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/setupExtensionsSample.js
[upgradeextensionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridcompute/arm-hybridcompute/samples/v5/javascript/upgradeExtensionsSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-hybridcompute
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/hybridcompute/arm-hybridcompute/README.md
